# Verid

./: .gitignore  Anchor.toml  Cargo.toml  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  veridlayer-brand-guidelines.html  veridlayer-landing-page.html
app/: layout.tsx  package-lock.json  package.json
app/app/: client-layout.tsx  globals.css  page.tsx  providers.tsx
app/app/dashboard/inspector/: page.tsx
app/app/dashboard/warehouse/: page.tsx
app/components/landing/: CTA.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Problem.tsx  Solution.tsx
app/dashboard/: layout.tsx
app/dashboard/lender/: page.tsx
app/prisma/: schema.prisma
components/: Nav.tsx
components/landing/: Roadmap.tsx  WhySolana.tsx
programs/attestation/: Cargo.toml
programs/attestation/src/: lib.rs
programs/lending-pool/: Cargo.toml
programs/lending-pool/src/: lib.rs
programs/lien-registry/: Cargo.toml
programs/lien-registry/src/: lib.rs
programs/receipt-mint/: Cargo.toml
programs/receipt-mint/src/: lib.rs
