[package]
name    = "lending-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_pool"

[dependencies]
anchor-lang  = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl   = { version = "0.30.1", features = ["token", "associated_token"] }
receipt-mint = { path = "../receipt-mint", features = ["cpi"] }
lien-registry = { path = "../lien-registry", features = ["cpi"] }
pyth-solana-receiver-sdk = { version = "0.3.0" }
