[package]
name    = "lien-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lien_registry"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []

[dependencies]
anchor-lang  = { version = "0.30.1" }
receipt-mint = { path = "../receipt-mint", features = ["cpi"] }
